--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
